[tool.poetry]
name = "price-comparer"
version = "0.1.0"
description = ""
authors = ["Moritz Enderle <73176174+M-Enderle@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
